<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.buildasinglescreenapp.MainActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#3F51B5"
        android:text="@string/shop_name"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        android:textAlignment="center"
        android:gravity="center_vertical"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/loc_img"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:src="@drawable/location"
            android:layout_marginRight="30dp"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="@android:color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/phone_img"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:src="@drawable/phone"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:text="@string/phone"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:paddingLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingTop="10dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:src="@drawable/open"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/timing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:text="@string/open"
            android:textColor="@android:color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingTop="10dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:src="@drawable/description"
            android:layout_marginRight="15dp"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:text="@string/description"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>
